Release History
===============


1.0.0b2 (unreleased)
--------------------

- LogTail gives a line-based iterator instead of a file object (#11564).
- Basic API docs for the most important classes (#11612).
- Made compatible with Python 2.7 (#11533).
- Made compatible with Python 3.3.


1.0.0b1 (2012-10-29)
--------------------

- Improve error reporting for missing contexts.
- Exit with code 3 if no metrics have been generated.
- Improve default Summary.verbose() to list all threshold violations.
- Move main source repository to https://bitbucket.org/gocept/nagiosplugin/
  (#11561).


1.0.0a2 (2012-10-26)
--------------------

- API docs for the most important classes (#7939).
- Added two tutorials (#9425).
- Fix packaging issues.


1.0.0a1 (2012-10-25)
--------------------

- Completely reworked API. The new API is not compatible with the old 0.4 API so
  you must update your plugins.
- Python 3 support.
- The `Cookie` class is now basically a persistent dict and accepts key/value
  pairs. Cookie are stored as JSON files by default so they can be inspected by
  the system administrator (#9400).
- New `LogTail` class which provides convenient access to constantly growing log
  files which are eventually rotated.


0.4.5 (2012-06-18)
------------------

- Windows port. `nagiosplugin` code now runs under pywin32 (#10899).
- Include examples in egg release (#9901).


0.4.4 (2011-07-18)
------------------

Bugfix release to fix issues reported by users.

- Improve Mac OS X compatibility (#8755).
- Include examples in distribution (#8555).


0.4.3 (2010-12-17)
------------------

- Change __str__ representation of large numbers to avoid scientific notation.


0.4.2 (2010-10-11)
------------------

- Packaging issues.


0.4.1 (2010-09-21)
------------------

- Fix distribution to install correctly.
- Documentation: tutorial and topic guides.


0.4 (2010-08-17)
----------------

- Initial public release.

.. vim: set ft=rst sw=3 sts=3 spell spelllang=en: