@@ -3,17 +3,14 @@
 
 """Access previously unseen parts of a growing text file."""
 
-from .compat import open_encoded
 import os
 
 
 class LogTail(object):
 
-    def __init__(self, path, cookie, mode='r', encoding=None):
+    def __init__(self, path, cookie):
         self.path = os.path.abspath(path)
         self.cookie = cookie
-        self.mode = mode
-        self.encoding = encoding
         self.logfile = None
         self.stat = None
 
@@ -24,12 +21,11 @@ class LogTail(object):
             self.logfile.seek(fileinfo['pos'])
 
     def __enter__(self):
-        self.logfile = open_encoded(
-            self.path, self.mode, encoding=self.encoding)
+        self.logfile = open(self.path, 'rb')
         self.cookie.open()
         self.seek_if_applicable(self.cookie.get(self.path, {}))
         line = self.logfile.readline()
-        while line != '':
+        while len(line):
             yield line
             line = self.logfile.readline()
 
